--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react": "19.1.0",
     "react-native": "0.80.0",
     "react-native-gesture-handler": "^2.26.0",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-permissions": "^5.4.1",
     "react-native-ratings": "^8.1.0",
+    "react-native-razorpay": "^2.3.0",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
     "react-native-size-matters": "^0.4.2",
@@ -38,6 +41,7 @@
     "@react-native/typescript-config": "0.80.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-native-razorpay": "^2.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
