--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-permissions": "^5.4.1",
     "react-native-ratings": "^8.1.0",
     "react-native-razorpay": "^2.3.0",
+    "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
     "react-native-size-matters": "^0.4.2",
