--- a/ios/Assesment/Info.plist
+++ b/ios/Assesment/Info.plist
@@ -47,6 +47,7 @@
 		<string>Poppins-SemiBold.ttf</string>
 		<string>Poppins-Thin.ttf</string>
 		<string>Entypo.ttf</string>
+		<string>Feather.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
