--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-gesture-handler": "^2.26.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-otp-entry": "^1.8.5",
     "react-native-permissions": "^5.4.1",
     "react-native-ratings": "^8.1.0",
     "react-native-razorpay": "^2.3.0",
